Updated final version

--- a/authentication_app_backend/.env
+++ b/authentication_app_backend/.env
@@ -1,5 +1,5 @@
-DB_USER=yourname
-DB_PASSWORD=yourpassword
-DB_SERVER=servername.database.windows.net
-DB_NAME=dbname
+DB_USER=sqladmin
+DB_PASSWORD=HitechP@ssyes2025
+DB_SERVER=tch-sql-servertest.database.windows.net
+DB_NAME=tch-sql-databasetest
 PORT=3000
