--- a/authentication_app_frontend/.env
+++ b/authentication_app_frontend/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL = https://mywebapp00-dmgdatemb6fhbvf3.westus2-01.azurewebsites.net
+NEXT_PUBLIC_API_URL = http://131.189.232.251/backend
